working on reflective boundaries

--- a/nufi/.deps/cuda_kernel.Po
+++ b/nufi/.deps/cuda_kernel.Po
@@ -245,10 +245,26 @@ cuda_kernel.o : cuda_kernel.cu \
     /usr/include/c++/11/pstl/glue_memory_defs.h \
     /usr/include/c++/11/pstl/execution_defs.h \
     ../nufi/config.hpp \
-    ../nufi/cuda_runtime.hpp \
-    ../nufi/autoconfig.hpp \
-    /usr/include/c++/11/stdexcept \
-    /usr/include/c++/11/string \
+    /usr/include/curand_kernel.h \
+    /usr/include/curand.h \
+    /usr/include/curand_discrete.h \
+    /usr/include/curand_precalc.h \
+    /usr/include/curand_mrg32k3a.h \
+    /usr/include/curand_mtgp32_kernel.h \
+    /usr/include/cuda.h \
+    /usr/include/memory.h \
+    /usr/include/curand_mtgp32.h \
+    /usr/include/curand_philox4x32_x.h \
+    /usr/include/curand_globals.h \
+    /usr/include/curand_uniform.h \
+    /usr/include/curand_normal.h \
+    /usr/include/curand_normal_static.h \
+    /usr/include/curand_lognormal.h \
+    /usr/include/curand_poisson.h \
+    /usr/include/curand_discrete2.h \
+    /usr/include/c++/11/iostream \
+    /usr/include/c++/11/ostream \
+    /usr/include/c++/11/ios \
     /usr/include/c++/11/bits/char_traits.h \
     /usr/include/c++/11/cstdint \
     /usr/include/c++/11/bits/localefwd.h \
@@ -258,6 +274,9 @@ cuda_kernel.o : cuda_kernel.cu \
     /usr/include/x86_64-linux-gnu/bits/locale.h \
     /usr/include/c++/11/cctype \
     /usr/include/ctype.h \
+    /usr/include/c++/11/bits/ios_base.h \
+    /usr/include/c++/11/bits/locale_classes.h \
+    /usr/include/c++/11/string \
     /usr/include/c++/11/bits/ostream_insert.h \
     /usr/include/c++/11/bits/cxxabi_forced.h \
     /usr/include/c++/11/bits/basic_string.h \
@@ -275,28 +294,49 @@ cuda_kernel.o : cuda_kernel.cu \
     /usr/include/x86_64-linux-gnu/bits/types/error_t.h \
     /usr/include/c++/11/bits/charconv.h \
     /usr/include/c++/11/bits/basic_string.tcc \
-    ../nufi/rho.hpp \
-    ../nufi/fields.hpp \
-    ../nufi/lsmr.hpp \
-    /usr/include/c++/11/iomanip \
-    /usr/include/c++/11/bits/ios_base.h \
-    /usr/include/c++/11/bits/locale_classes.h \
     /usr/include/c++/11/bits/locale_classes.tcc \
     /usr/include/c++/11/system_error \
     /usr/include/x86_64-linux-gnu/c++/11/bits/error_constants.h \
-    /usr/include/c++/11/locale \
+    /usr/include/c++/11/stdexcept \
+    /usr/include/c++/11/streambuf \
+    /usr/include/c++/11/bits/streambuf.tcc \
+    /usr/include/c++/11/bits/basic_ios.h \
     /usr/include/c++/11/bits/locale_facets.h \
     /usr/include/c++/11/cwctype \
     /usr/include/wctype.h \
     /usr/include/x86_64-linux-gnu/bits/wctype-wchar.h \
     /usr/include/x86_64-linux-gnu/c++/11/bits/ctype_base.h \
-    /usr/include/c++/11/streambuf \
-    /usr/include/c++/11/bits/streambuf.tcc \
     /usr/include/c++/11/bits/streambuf_iterator.h \
     /usr/include/x86_64-linux-gnu/c++/11/bits/ctype_inline.h \
     /usr/include/c++/11/bits/locale_facets.tcc \
-    /usr/include/c++/11/bits/locale_facets_nonio.h \
+    /usr/include/c++/11/bits/basic_ios.tcc \
+    /usr/include/c++/11/bits/ostream.tcc \
+    /usr/include/c++/11/istream \
+    /usr/include/c++/11/bits/istream.tcc \
+    /usr/include/c++/11/chrono \
+    /usr/include/c++/11/ratio \
     /usr/include/c++/11/ctime \
+    /usr/include/c++/11/bits/parse_numbers.h \
+    /usr/include/c++/11/random \
+    /usr/include/c++/11/bits/random.h \
+    /usr/include/c++/11/vector \
+    /usr/include/c++/11/bits/stl_vector.h \
+    /usr/include/c++/11/bits/stl_bvector.h \
+    /usr/include/c++/11/bits/vector.tcc \
+    /usr/include/c++/11/bits/uniform_int_dist.h \
+    /usr/include/x86_64-linux-gnu/c++/11/bits/opt_random.h \
+    /usr/include/c++/11/bits/random.tcc \
+    /usr/include/c++/11/numeric \
+    /usr/include/c++/11/bits/stl_numeric.h \
+    /usr/include/c++/11/pstl/glue_numeric_defs.h \
+    ../nufi/cuda_runtime.hpp \
+    ../nufi/autoconfig.hpp \
+    ../nufi/rho.hpp \
+    ../nufi/fields.hpp \
+    ../nufi/lsmr.hpp \
+    /usr/include/c++/11/iomanip \
+    /usr/include/c++/11/locale \
+    /usr/include/c++/11/bits/locale_facets_nonio.h \
     /usr/include/x86_64-linux-gnu/c++/11/bits/time_members.h \
     /usr/include/x86_64-linux-gnu/c++/11/bits/messages_members.h \
     /usr/include/libintl.h \
@@ -305,15 +345,7 @@ cuda_kernel.o : cuda_kernel.cu \
     /usr/include/c++/11/bits/locale_conv.h \
     /usr/include/c++/11/bits/quoted_string.h \
     /usr/include/c++/11/sstream \
-    /usr/include/c++/11/istream \
-    /usr/include/c++/11/ios \
-    /usr/include/c++/11/bits/basic_ios.h \
-    /usr/include/c++/11/bits/basic_ios.tcc \
-    /usr/include/c++/11/ostream \
-    /usr/include/c++/11/bits/ostream.tcc \
-    /usr/include/c++/11/bits/istream.tcc \
     /usr/include/c++/11/bits/sstream.tcc \
-    /usr/include/c++/11/iostream \
     ../nufi/blas.hpp \
     /usr/include/c++/11/cstddef \
     ../nufi/lsmr.tpp \
